Replace xstream with fury (#127)
* initial fury transition

* switch to fury nightly

* use new module names

* switch to stable release

* remove rebase artifact

* bump version